--- a/www/index.html
+++ b/www/index.html
@@ -11,55 +11,39 @@
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
     <style type="text/css">
-      body {
-        padding-top: 20px;
-        padding-bottom: 15px;
-      }
 
-      /* Custom container */
-      .container {
-        max-width: 1170px;
-      }
+			html,
+			body {
+				height: 100%;
+			}
+			* {
+				margin: 0;
+			}
+			.wrap {
+				min-height: 100%;
+				height: auto !important;
+				height: 100%;
+				margin: 0 auto -60px;
+			}
+			.push,
+			.footer {
+				height: 60px;
+			}
+			
+			.mainarea {
+				padding-top: 50px;
+			}
 
-      /* Customize the navbar links to be fill the entire space of the .navbar */
-      .navbar .navbar-inner {
-        padding: 0;
+      .footer {
+        background-color: #ffffff;
       }
-      .navbar .nav {
-        margin: 0;
-        display: table;
-        width: 100%;
-      }
-      .navbar .nav li {
-        display: table-cell;
-        width: 1%;
-        float: none;
-      }
-      
-      .navbar .nav li li{
-        margin: 0;
-        display: table;
-        width: 100%;
-      }
-      .navbar .nav li a {
-        font-weight: bold;
-        text-align: center;
-        border-left: 1px solid rgba(255,255,255,.75);
-        border-right: 1px solid rgba(0,0,0,.1);
-      }
-			.navbar .nav li ul li a {
-        font-weight: bold;
-        text-align: left;
-        border-left: 1px solid rgba(255,255,255,.75);
-        border-right: 1px solid rgba(0,0,0,.1);
-      }
-      .navbar .nav li:first-child a {
-        border-left: 0;
-        border-radius: 3px 0 0 3px;
-      }
-      .navbar .nav li:last-child a {
-        border-right: 0;
-        border-radius: 0 3px 3px 0;
+			 @media (max-width: 767px) {
+				.footer {
+					margin-left: -20px;
+					margin-right: -20px;
+					padding-left: 20px;
+					padding-right: 20px;
+				}
       }
       .area1{
         position: relative;
@@ -73,7 +57,7 @@
       }
       .spieloptions{
         position: relative;
-/*        margin: 0px 0;*/
+        margin: 0px 0;
         padding: 39px 19px 14px;
         background-color: white;
         border: 1px solid #DDD;
@@ -96,34 +80,9 @@
         -moz-border-radius: 4px 0 4px 0;
         border-radius: 4px 0 4px 0;
       }
-      .buttonarea{
-        position: relative;
-/*        margin: 0px 0;*/
-        padding: 39px 19px 14px;
-        background-color: white;
-        border: 1px solid #DDD;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
-        border-radius: 4px;
-      }
-      .buttonarea:after{
-        content: "Actions";
-        position: absolute;
-        top: -1px;
-        left: -1px;
-        padding: 3px 7px;
-        font-size: 12px;
-        font-weight: bold;
-        background-color: whiteSmoke;
-        border: 1px solid #DDD;
-        color: #9DA0A4;
-        -webkit-border-radius: 4px 0 4px 0;
-        -moz-border-radius: 4px 0 4px 0;
-        border-radius: 4px 0 4px 0;
-      }
       .spieleditor{
         position: relative;
-/*        margin: 0px 0;*/
+        margin: 0px 0;
         padding: 39px 19px 14px;
         background-color: white;
         border: 1px solid #DDD;
@@ -148,149 +107,147 @@
       }
     </style>
 
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="../assets/js/html5shiv.js"></script>
-    <![endif]-->
-
   </head>
 
   <body>
-
-    <div class="container">
-      <div class="masthead">
-        <h3>tiptoi® - CMS (andromeda) 2.4.6 – Produkt: Testprodukt</h3></br>
-        <div class="navbar">
-          <div class="navbar-inner">
-            <div class="container">
+		<div class="wrap">
+		  <div class="navbar navbar-inverse navbar-fixed-top">
+        <div class="navbar-inner">
+          <div class="container">
+            <a class="brand" href="#">tiptoi® - CMS: Testprodukt</a>
+            <div class="nav-collapse collapse">
               <ul class="nav">
                 <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Doppelseiten<b class="caret"></b></a>
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Doppelseiten<b class="caret"></b></a>
                   <ul class="dropdown-menu">
-                        <li><a href="#">Doppelseite 1</a></li>
-                        <li><a href="#">Doppelseite 2</a></li>
-                        <li><a href="#">Doppelseiten und OIDs</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Spiele<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li class="dropdown-submenu">
-                      <a href="#">Spiele Editor</a>
-                      <ul class="dropdown-menu pull-right">
-                        <li><a href="#">Spiel 1</a></li>
-                        <li><a href="#">Spiel 2</a></li>
-                        <li><a href="#">Spiel 3</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown-submenu">
-                      <a href="#">Spiele Inhalte</a>
-                      <ul class="dropdown-menu pull-right">
-                        <li><a href="#">Spiel 1</a></li>
-                        <li><a href="#">Spiel 2</a></li>
-                        <li><a href="#">Spiel 3</a></li>
-                      </ul>
-                    </li>
-                    <li class="dropdown-submenu">
-                      <a href="#">Spiele Simulator</a>
-                      <ul class="dropdown-menu pull-right">
-                        <li><a href="#">Spiel 1</a></li>
-                        <li><a href="#">Spiel 2</a></li>
-                        <li><a href="#">Spiel 3</a></li>
-                      </ul>
-                    </li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Steuerung<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                        <li><a href="#">Export der Matrix</a></li>
-                        <li><a href="#">Export aller Spiele</a></li>
-                        <li><a href="#">OID-Export (Sonix)</a></li>
-                        <li><a href="#">Export der Tonstudioliste</a></li>
-                        <li><a href="#">Automatische Soundnummernvergabe</a></li>
-                        <li><a href="#">Game Creater</a></li>
-                        <li><a href="#">Sound-Import</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sounds & Texte<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                        <li><a href="#">Neuen Sound erstellen</a></li>
-                        <li><a href="#">Sounds suchen</a></li>
-                        <li><a href="#">Sprecher suchen</a></li>
-                        <li><a href="#">Neuen Sprecher erstellen</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sprecher<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                        <li><a href="#">Neuen Sprecher erstellen</a></li>
-                        <li><a href="#">Sprecher suchen</a></li>
-                        <li><a href="#">David Ingrim (#502)</a></li>
-                  </ul>
-                </li>
-                <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Produktinfo<b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                        <li><a href="#">Testprodukt (TEST)</a></li>
-                        <li><a href="#">Die Tiere Afrikas (TAF)</a></li>
-                        <li><a href="#">Stadt (STA)</a></li>
-                  </ul>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div><!-- /.navbar -->
-      </div>
+										<li><a href="#">Doppelseite 1</a></li>
+										<li><a href="#">Doppelseite 2</a></li>
+										<li><a href="#">Doppelseiten und OIDs</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Spiele<b class="caret"></b></a>
+									<ul class="dropdown-menu">
+										<li class="dropdown-submenu">
+											<a href="#">Spiele Editor</a>
+											<ul class="dropdown-menu pull-right">
+												<li><a href="#">Spiel 1</a></li>
+												<li><a href="#">Spiel 2</a></li>
+												<li><a href="#">Spiel 3</a></li>
+											</ul>
+										</li>
+										<li class="dropdown-submenu">
+											<a href="#">Spiele Inhalte</a>
+											<ul class="dropdown-menu pull-right">
+												<li><a href="#">Spiel 1</a></li>
+												<li><a href="#">Spiel 2</a></li>
+												<li><a href="#">Spiel 3</a></li>
+											</ul>
+										</li>
+										<li class="dropdown-submenu">
+											<a href="#">Spiele Simulator</a>
+											<ul class="dropdown-menu pull-right">
+												<li><a href="#">Spiel 1</a></li>
+												<li><a href="#">Spiel 2</a></li>
+												<li><a href="#">Spiel 3</a></li>
+											</ul>
+										</li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Steuerung<b class="caret"></b></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Export der Matrix</a></li>
+										<li><a href="#">Export aller Spiele</a></li>
+										<li><a href="#">OID-Export (Sonix)</a></li>
+										<li><a href="#">Export der Tonstudioliste</a></li>
+										<li><a href="#">Automatische Soundnummernvergabe</a></li>
+										<li><a href="#">Game Creater</a></li>
+										<li><a href="#">Sound-Import</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Sounds & Texte<b class="caret"></b></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Neuen Sound erstellen</a></li>
+										<li><a href="#">Sounds suchen</a></li>
+										<li><a href="#">Sprecher suchen</a></li>
+										<li><a href="#">Neuen Sprecher erstellen</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Sprecher<b class="caret"></b></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Neuen Sprecher erstellen</a></li>
+										<li><a href="#">Sprecher suchen</a></li>
+										<li><a href="#">David Ingrim (#502)</a></li>
+									</ul>
+								</li>
+								<li class="dropdown">
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">Produktinfo<b class="caret"></b></a>
+									<ul class="dropdown-menu">
+										<li><a href="#">Testprodukt (TEST)</a></li>
+										<li><a href="#">Die Tiere Afrikas (TAF)</a></li>
+										<li><a href="#">Stadt (STA)</a></li>
+									</ul>
+								</li>						
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 
-      <div class="row-fluid">
-        <div  class="span12">
-          <div class="mainarea">
-            <ul class="nav nav-tabs">
-              <li><a href="#" data-toggle="tab">Willkommen</a></li>
-              <li><a href="#" data-toggle="tab">Spiel 1</a></li>
-              <li><a href="#" data-toggle="tab">Spiel 13</a></li>
-            </ul>
-            <div  class="span12" style="overflow-y:scroll; max-height: 380px">
-              <div class="spieloptions">
-                <div class="row-fluid">
-                  <div class="span4">
-                    <p>fortlaufende Nummer des Spieles</p>
-                    <input class="input-mini" type="text"></br>
-                    <p class="divider"></p>
-                    <p>Doppelseite</p>
-                    <select>
-                      <option>1</option>
-                      <option>2</option>
-                      <option>3</option>
-                      <option>4</option>
-                      <option>5</option>
-                    </select>
-                  </div>
-                  <div class="span8">
-                    <p>Titel</p>
-                    <input class="input-xxlarge" type="text">
-                    <span class="help-block">
-                      <p><small><em>Kann folgende Variablen erhalten (die ersetzt werden):</em></small></p>
-                      <p><small><em>%nummer% : die Nummer des Spieles</em></small></p>
-                      <p><small><em>%ds% : die Doppelseite des Spieles</em></small></p>
-                      <p><small><em>%type% : der SpielTyp des Spieles</em></small></p></br>
-                      <p><small><em>z. B. „Spiel %nummer%: Suchspiel (DS %ds%)“ würde ergeben: „Spiel 1: Suchspiel (DS 5)“</em></small></p>
-                    </span>
-                  </div>
-                </div>
-              </div>
-              </br>
-              <div class="spieleditor">
-                <textarea rows="40">Statt diesem area muss ace-editor stehen</textarea>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+			<div class="container">
+				<div class="row-fluid">
+					<div  class="span12">
+						<div class="mainarea">
+							<ul class="nav nav-tabs">
+								<li><a href="#" data-toggle="tab">Willkommen</a></li>
+								<li><a href="#" data-toggle="tab">Spiel 1</a></li>
+								<li><a href="#" data-toggle="tab">Spiel 13</a></li>
+							</ul>
+							<div class="span12">
+								<div class="spieloptions">
+									<div class="row-fluid">
+										<div class="span4">
+											<p>fortlaufende Nummer des Spieles</p>
+											<input class="input-mini" type="text"></br>
+											<p class="divider"></p>
+											<p>Doppelseite</p>
+											<select>
+												<option>1</option>
+												<option>2</option>
+												<option>3</option>
+												<option>4</option>
+												<option>5</option>
+											</select>
+										</div>
+										<div class="span8">
+											<p>Titel</p>
+											<input class="input-xxlarge" type="text">
+											<span class="help-block">
+												<p><small><em>Kann folgende Variablen erhalten (die ersetzt werden):</em></small></p>
+												<p><small><em>%nummer% : die Nummer des Spieles</em></small></p>
+												<p><small><em>%ds% : die Doppelseite des Spieles</em></small></p>
+												<p><small><em>%type% : der SpielTyp des Spieles</em></small></p></br>
+												<p><small><em>z. B. „Spiel %nummer%: Suchspiel (DS %ds%)“ würde ergeben: „Spiel 1: Suchspiel (DS 5)“</em></small></p>
+											</span>
+										</div>
+									</div>
+								</div>
+								</br>
+								<div class="spieleditor">
+									<textarea rows="40">Statt diesem area muss ace-editor stehen</textarea>
+								</div>
+							</div>
+						</div>
+					</div>	
+				</div>
+			</div>
+			<div class="push"></div>
+		</div>
 
-			</br>
+		<div class="container">
       <div class="footer">
 				<button class="btn" type="button"><i class="icon-remove"></i>  Schließen</button>
 				<button class="btn" type="button"><i class="icon-repeat"></i>  Neu laden</button>
@@ -298,10 +255,9 @@
         <button class="btn" type="button"><i class="icon-star"></i>  Simulator starten</button>
         <button class="btn" type="button"><i class="icon-pencil"></i>  Editor starten</button>
         <button class="btn" type="button"><i class="icon-remove-circle"></i>  Spiel löschen  <i class="icon-exclamation-sign"></i></button>
-        </br><a href="mailto: p.scheit@ps-webforge.com">p.scheit@ps-webforge.com</a>
       </div>
+		</div>
 
-    </div> <!-- /container -->
 
     <!-- Le javascript
     ================================================== -->
